--- a/Cerdikiawan/project.yml
+++ b/Cerdikiawan/project.yml
@@ -6,6 +6,10 @@ options:
   bundleIdPrefix: id.ac.binus.skripsicerdikiawan
   deploymentTarget:
     iOS: "17.0"
+packages:
+  supabase-swift:
+    url: https://github.com/supabase-community/supabase-swift.git
+    from: 2.5.1
 targets:
   Cerdikiawan:
     type: application
@@ -36,6 +40,10 @@ targets:
             UIInterfaceOrientationLandscapeLeft,
             UIInterfaceOrientationLandscapeRight,
           ]
+    dependencies:
+      - package: supabase-swift
+        products:
+          - Supabase
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: id.ac.binus.skripsicerdikiawan.Cerdikiawan
       INFOPLIST_FILE: Cerdikiawan/Info.plist
