--- a/Cerdikiawan/project.yml
+++ b/Cerdikiawan/project.yml
@@ -65,7 +65,7 @@ targets:
         TEST_HOST: "$(BUILT_PRODUCTS_DIR)/Cerdikiawan.app/Cerdikiawan"
         BUNDLE_LOADER: "$(TEST_HOST)"
 schemes:
-  FamilyStoryADA:
+  Cerdikiawan:
     build:
       targets:
         Cerdikiawan: all
